# programs

game_life/: CMakeLists.txt  life.txt  main.cpp
game_life/console/: CMakeLists.txt  console.cpp  console.h
game_life/game/: CMakeLists.txt  game.cpp  game.h
